[package]
name = "sota-labs-bitcoin-rpc"
version = "0.18.0"
edition = "2021"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]

[dependencies]
bitcoincore-rpc = { version = "0.18.0" }
bitcoincore-rpc-json = { version = "0.18.0" }
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.37" }
url = { version = "2.5" }

[dev-dependencies]
tempfile = "3.3.0"
